✨ Tweaked entrypoint.